# detect

./: Cargo.toml  Makefile  readme.md
src/: main.rs
