[package]
name = "rdetect"
version = "0.2.1"
authors = ["Axel Örn Sigurðsson <axel@absalon.is>"]
description = "Traverse up directories to find files/folders by name"
repository = "https://github.com/ikornaselur/detect"
license = "MIT"
readme = "readme.md"

[dependencies]
clap = "2.32.0"

[[bin]]
name = "detect"
path = "src/main.rs"
